# opensearch-multimodal-demo

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-runpod-openlens-encoder-serverless.yml  build-runpod-openlens-qwen-encoder.yml
docker/runpod-openlens-encoder-serverless/: Dockerfile  README.md  handler.py
docker/runpod-openlens-qwen-encoder/: Dockerfile  README.md  runpod-start.sh  verify_openlens_qwen.py
docs/: modality-specific-chunking.md  opensearch-36-colpali.md  retrieval-quality-and-display.md  runpod-gpu-plan.md  runpod-serverless-encoding.md  verification-2026-05-01.md
docs/benchmarks/: local-2026-05-01-feature-hash.json  local-2026-05-01-feature-hash.md  local-2026-05-01-nasa-feature-hash.json  local-2026-05-01-nasa-feature-hash.md
scripts/: build_open_corpus.py  index_open_corpus.py  smoke_demo.py
scripts/runpod/: _common.sh  down.sh  full-power-demo-remote.sh  full-power-demo.sh  run.sh  tune-colpali.sh  tune-qwen.sh  up.sh
scripts/runpod/serverless/: deploy_encoder.sh  smoke_encoder.py
src/openlens/: __init__.py  api.py  audio_embedder.py  colpali_embedder.py  config.py  data.py  embeddings.py  indexer.py  modality_embedder.py  models.py  qwen_embedder.py  retrieval.py  serverless_encoder.py  sources.py  text.py  video.py
src/openlens/scripts/: __init__.py  benchmark_colpali.py  benchmark_qwen.py  benchmark_retrieval.py  build_open_corpus.py  index_open_corpus.py  smoke_demo.py
src/openlens/static/: app.js  index.html  styles.css
tests/: test_core.py
